--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -36,6 +36,38 @@
     list-style-type: none;
     display: flex;
     height: fit-content;
+    position: relative;
+
+    .mealLabel {
+      position: absolute;
+      align-self: flex-end;
+      left: -1.4rem;
+      width: 1.4rem;
+      height: calc(69vh + 0.5rem);
+      // border: 1px solid black;
+      display: flex;
+      flex-direction: column;
+
+      div {
+        height: calc(100% / 3);
+        display: flex;
+        align-items: center;
+
+        div {
+          height: fit-content;
+          transform: rotate(180deg);
+          writing-mode: vertical-lr;
+          text-align: center;
+          user-select: none;
+          font-size: 1rem;
+          font-weight: bold;
+          color: white;
+          background-color: rgba(0, 0, 0, 0.25);
+          padding: 0.5rem 0.25rem 0.5rem 0;
+          border-radius: 0 0.5rem 0.5rem 0;
+        }
+      }
+    }
 
     li {
       display: flex;
@@ -43,7 +75,7 @@
       width: calc(100% / 7);
       height: 100%;
       position: relative;
-      align-items: center;
+      align-items: flex-start;
       z-index: 2;
 
       div {
@@ -56,11 +88,10 @@
       .dayDate {
         flex-direction: column;
         width: 95%;
-        border-radius: 1rem 0 1rem;
+        border-radius: 2rem 0 0;
         background-color: #29a64d;
         margin-bottom: 0.5rem;
         overflow: hidden;
-        box-shadow: 2px 2px 0.5rem #2aa74dcc;
         user-select: none;
 
         .dayName {
@@ -72,9 +103,9 @@
 
         .dayNumber {
           width: 100%;
-          font-size: 3.5rem;
+          font-size: 3rem;
           font-weight: bold;
-          background-color: white;
+          background-color: rgba(255, 255, 255, 0.95);
           border: 0.75rem solid #29a64d;
           border-top: none;
         }
@@ -85,12 +116,15 @@
       .dinner {
         flex-direction: column;
         justify-content: flex-start;
+        width: 95%;
         height: 23vh;
-        border: 0.25rem double #29a64d;
+        border: 0.15rem solid rgba(41, 166, 76, 0.15);
         padding: 0.25rem;
         text-wrap: balance;
         overflow-y: scroll;
         background-color: #d0f4da;
+        margin-bottom: 0.25rem;
+        border-radius: 1rem 0 1rem;
 
         .addButton {
           width: 1.5rem;
@@ -187,26 +221,30 @@
         }
 
         &:hover {
-          border: 0.1rem solid #29a64d;
-          padding: 0.425rem;
+          border: 0.15rem solid #29a64d;
+          box-shadow: 4px 4px 8px rgba(42, 167, 77, 0.5);
         }
       }
 
-      .dinner:hover {
-        padding-bottom: 0.45rem;
+      .dinner {
+        margin-bottom: 0;
       }
 
       .clearDay {
         position: absolute;
+        align-self: flex-end;
         bottom: 0;
-        width: 50%;
+        width: fit-content;
         height: 1rem;
-        font-size: 0.75rem;
+        font-size: 0.5rem;
         border: none;
         border-radius: 0 0 0.5rem 0.5rem;
         z-index: -1;
         color: white;
         background-color: red;
+        font-weight: bold;
+        padding: 0.15rem 0.25rem 0;
+        margin-right: 1.25rem;
 
         &:hover {
           cursor: pointer;
@@ -214,6 +252,9 @@
       }
 
       &:hover {
+        .dayDate {
+          box-shadow: 2px 4px 0.5rem #2aa74dcc;
+        }
         .clearDay {
           bottom: -1rem;
           transition: 0.5s ease;
@@ -231,7 +272,6 @@
       left: 50%;
       transform: translate(-50%, -50%);
       z-index: 99;
-      background-color: rgba(128, 128, 128, 0.6);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -250,10 +290,13 @@
         overflow: scroll;
         overflow-x: hidden;
         position: relative;
+        border: 0.15rem solid rgba(41, 166, 76, 0.15);
+        box-shadow: 0.5rem 0.5rem 01rem rgba(41, 166, 76, 0.5);
 
         p {
           margin-bottom: 1rem;
           line-height: 1.5rem;
+          user-select: none;
 
           span {
             font-size: 2rem;
