--- a/src/components/Ingredients/Ingredients.module.scss
+++ b/src/components/Ingredients/Ingredients.module.scss
@@ -15,7 +15,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.85);
     padding: 2rem;
     border-radius: 2rem 0 2rem;
     box-shadow: 0.5rem 0.75rem 2rem -1.5rem black;
@@ -34,6 +34,7 @@
       border: 2px dashed rgb(137, 216, 255);
       border-radius: 1rem 0 1rem;
       box-shadow: 0.5rem 0.75rem 1rem -0.5rem rgb(137, 216, 255);
+      background-color: white;
 
       p {
         font-weight: bold;
