--- a/src/components/Instructions/Instructions.module.scss
+++ b/src/components/Instructions/Instructions.module.scss
@@ -16,7 +16,7 @@
     width: 100%;
     padding: 3rem 3rem 0rem;
     border-radius: 2rem 0 2rem;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.85);
     box-shadow: 0.5rem 0.75rem 2rem -1.5rem black;
     // text-align: center;
 
@@ -61,6 +61,7 @@
             border-radius: 1rem 0 1rem;
             box-shadow: 0.3rem 0.5rem 0.75rem -0.3rem rgb(137, 216, 255);
             overflow: visible;
+            background-color: white;
 
             p {
               margin-bottom: 0.5rem;
