--- a/src/components/Nutrition/Nutrition.module.scss
+++ b/src/components/Nutrition/Nutrition.module.scss
@@ -5,7 +5,7 @@
   padding: 2rem 4rem;
   font-size: 1rem;
   color: black;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.85);
   border-radius: 2rem 0 2rem;
   box-shadow: 0.5rem 0.75rem 2rem -1.5rem black;
 
