--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -41,8 +41,8 @@
     .mealLabel {
       position: absolute;
       align-self: flex-end;
-      left: -1.4rem;
-      width: 1.4rem;
+      left: -1.1rem;
+      width: 1.1rem;
       height: calc(69vh + 0.5rem);
       // border: 1px solid black;
       display: flex;
@@ -59,12 +59,13 @@
           writing-mode: vertical-lr;
           text-align: center;
           user-select: none;
-          font-size: 1rem;
+          font-size: 0.8rem;
+          letter-spacing: 1px;
           font-weight: bold;
           color: white;
           background-color: rgba(0, 0, 0, 0.25);
-          padding: 0.5rem 0.25rem 0.5rem 0;
-          border-radius: 0 0.5rem 0.5rem 0;
+          padding: 0.75rem 0.15rem 0.25rem 0;
+          border-radius: 0 1rem 0rem 0;
         }
       }
     }
@@ -93,12 +94,36 @@
         margin-bottom: 0.5rem;
         overflow: hidden;
         user-select: none;
+        position: relative;
 
         .dayName {
           width: 100%;
           font-size: 1.5rem;
           padding: 0.5rem 0 0.5rem;
           color: white;
+
+          button {
+            position: absolute;
+            top: 0.25rem;
+            right: 0.25rem;
+            width: 1.5rem;
+            height: 1.5rem;
+            background-color: transparent;
+            border: none;
+            svg {
+              width: 100%;
+              height: 100%;
+              fill: black;
+            }
+
+            &:hover {
+              cursor: pointer;
+
+              svg {
+                fill: white;
+              }
+            }
+          }
         }
 
         .dayNumber {
@@ -275,9 +300,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      transition: all 1s ease;
 
       .addCard {
-        width: 75%;
+        width: fit-content;
+        max-width: 75%;
         max-height: 90vh;
         // height: max-content;
         // height: 25%;
@@ -294,7 +321,7 @@
         box-shadow: 0.5rem 0.5rem 01rem rgba(41, 166, 76, 0.5);
 
         p {
-          margin-bottom: 1rem;
+          margin: 0.5rem 1rem 1rem;
           line-height: 1.5rem;
           user-select: none;
 
@@ -307,10 +334,12 @@
         .searchbar {
           display: flex;
           flex-direction: row;
-          width: 50%;
+          width: 90%;
+          max-width: 30rem;
           border: 2px solid black;
           border-radius: 0.5rem 0 0.5rem;
           padding: 0.25rem 0.5rem;
+          align-items: center;
 
           form {
             display: flex;
@@ -365,7 +394,6 @@
             svg {
               width: 1.5rem;
               height: 1.5rem;
-              fill: gold;
               stroke: black;
               stroke-width: 5px;
             }
