--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -104,24 +104,21 @@
 
           button {
             position: absolute;
-            top: 0.25rem;
-            right: 0.25rem;
+            top: 0.3rem;
+            right: 0.3rem;
             width: 1.5rem;
             height: 1.5rem;
             background-color: transparent;
             border: none;
+
             svg {
               width: 100%;
               height: 100%;
-              fill: black;
+              fill: none;
             }
 
             &:hover {
               cursor: pointer;
-
-              svg {
-                fill: white;
-              }
             }
           }
         }
@@ -146,7 +143,7 @@
         border: 0.15rem solid rgba(41, 166, 76, 0.15);
         padding: 0.25rem;
         text-wrap: balance;
-        overflow-y: scroll;
+        overflow-y: auto;
         background-color: #d0f4da;
         margin-bottom: 0.25rem;
         border-radius: 1rem 0 1rem;
@@ -170,7 +167,18 @@
         }
 
         &::-webkit-scrollbar {
-          display: none;
+          // display: none;
+          width: 0.2rem;
+          scrollbar-gutter: stable;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background: transparent;
+          border-radius: 0.1rem;
+        }
+
+        &::-webkit-scrollbar-track {
+          margin: 0.25rem 0rem 2.25rem;
         }
 
         .mealItem {
@@ -248,6 +256,10 @@
         &:hover {
           border: 0.15rem solid #29a64d;
           box-shadow: 4px 4px 8px rgba(42, 167, 77, 0.5);
+
+          &::-webkit-scrollbar-thumb {
+            background: rgba(41, 166, 76, 0.8);
+          }
         }
       }
 
@@ -279,6 +291,11 @@
       &:hover {
         .dayDate {
           box-shadow: 2px 4px 0.5rem #2aa74dcc;
+          button {
+            svg {
+              fill: white;
+            }
+          }
         }
         .clearDay {
           bottom: -1rem;
@@ -387,15 +404,18 @@
             border: none;
             margin: -2px 0 0 4px;
 
-            &:hover {
-              cursor: pointer;
-            }
-
             svg {
               width: 1.5rem;
               height: 1.5rem;
               stroke: black;
               stroke-width: 5px;
+            }
+            &:hover {
+              cursor: pointer;
+
+              svg {
+                fill: gold;
+              }
             }
           }
         }
