--- a/src/pages/ShopingList/ShopingList.module.scss
+++ b/src/pages/ShopingList/ShopingList.module.scss
@@ -1,10 +1,105 @@
 .shopingList {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   width: 100vw;
+  user-select: none;
 
   form {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    width: 100%;
+    margin: 1rem;
+    align-items: center;
+
+    input,
+    button {
+      height: 2rem;
+      margin: 0 0.5rem 0 0.5rem;
+      padding: 0.25rem;
+    }
+
+    .saveSLbutton {
+      margin: 0 3rem 0 auto;
+    }
+  }
+
+  .savedSL {
     width: fit-content;
+    align-self: flex-end;
+    margin-right: 2rem;
+
+    &:hover {
+      cursor: pointer;
+      text-decoration: underline;
+    }
+  }
+
+  .fromToDate {
+    position: relative;
+    align-self: center;
+    font-size: 2rem;
+    font-weight: bold;
+
+    .saveSL {
+      position: absolute;
+      right: 0rem;
+      bottom: -1.5rem;
+      width: 2rem;
+      height: 2rem;
+      border: none;
+      background-color: transparent;
+      &:hover {
+        cursor: pointer;
+        svg {
+          fill: #29a64d;
+        }
+      }
+    }
+
+    .delSL {
+      position: absolute;
+      right: -2rem;
+      width: 2rem;
+      height: 2rem;
+      border: none;
+      background-color: transparent;
+      &:hover {
+        cursor: pointer;
+        svg {
+          path {
+            stroke: #29a64d;
+          }
+        }
+      }
+    }
+  }
+
+  .aisles {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 2rem;
+    width: 100%;
+
+    .aisle {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 25%;
+      padding: 0.5rem;
+
+      ul {
+        list-style: none;
+        margin: 1rem 0 2rem;
+        padding: 1rem;
+        background-color: rgba(255, 255, 255, 0.5);
+        border-radius: 1rem 0 1rem 0;
+
+        li {
+          margin-bottom: 0.25rem;
+        }
+      }
+    }
   }
 }
